# graphic-kit

./: .gitignore  .gitmodules  AUTHOR  CMakeLists.txt  Doxyfile  README.md  __opengl_drawer.cpp  graphic-toolkit.pri  just_impl_gl.cpp  opengl.qrc  opengl_drawer.cpp  qt_easiest_matrice_controler.cpp  qt_easiest_matrice_controler.ui
CMakeModules/: CMakeCustomModules.cmake  FindGTOOLS.cmake  FindGraphicKit.cmake  FindGraphicToolkit.cmake  FindGraphicTools.cmake  gtools.cmake
_links/: How to render using glMultiDrawArraysIndirect - opengl.url  Tutorial2- VAOs, VBOs, Vertex and Fragment Shaders (C - SDL) - OpenGL Wiki.url  Vertex Specification - OpenGL Wiki.url  glMultiDrawArraysIndirect - OpenGL 4 Reference Pages.url
examples/: CMakeLists.txt  text.cpp  triangle_red.cpp  triangle_red_by_heap.cpp  triangle_red_by_heap_on_sequencer.cpp--idea  triangle_red_min.cpp  triangle_textured.cpp
examples/_wait-maj/common/: ModelViewProjection.hpp  Window.cpp  Window.hpp
examples/common/: AbstractPainter.hpp  Window.hpp
examples/text/: shader.frag  shader.vert
examples/triangle_red/: shader.frag  shaders.erc
examples/triangle_red_by_heap/: shader.vert
examples/triangle_textured/: res.erc  shader.frag  shader.vert
include/gk/: debug.hpp  enum_bits.hpp  equations.hpp  frame_limiter.hpp  istream.hpp  math.hpp  math.ipp  matrices.hpp  random.hpp  time.hpp  types.hpp  vectors.hpp
include/gk/classes/: basic_setup.hpp  non_copyable.hpp  non_copyable_movable.hpp
include/gk/color/: hsl.hpp  hsl_plot.hpp  list.hpp  rgba.hpp
include/gk/decoder/: image.hpp  object.hpp
include/gk/encoder/: ffmpeg_command_line.hpp  image.hpp  object.hpp
include/gk/gui/: abstract.hpp  colors_palette.hpp  imgui.hpp  imgui.ipp
include/gk/matrices/: abstract.hpp  base_camera.hpp  composed_matrices.hpp  model.hpp  projection.hpp  view_lookat.hpp  view_subjective.hpp
include/gk/opengl/: composed_program.hpp  composed_program.ipp  core_context.hpp  primitives_heap.hpp  primitives_heap.ipp  quick_program.hpp  quick_program.ipp  quick_shader.hpp  quick_shader.ipp  quick_text.hpp  quick_text_bff_wrapper.hpp  quick_text_expander.hpp  sequence_divisor.hpp  texture.hpp
include/gk/render/: abstract.hpp  data_matrix.hpp  data_obj.hpp  data_texture.hpp  painter_context.hpp  painter_context.ipp
include/gk/resource_manager/: abstract.hpp  buffer.hpp  shader_lib.hpp
include/gk/structures_pack/: vertex_uv.hpp  vertex_uv_norm.hpp
include/gk/window/: abstract.hpp  abstract.ipp  abstract_controller.hpp  abstract_receiver.hpp  glfw.hpp  glfw.ipp  glfw_controller.hpp  glfw_controller.ipp
include/graphic_toolkit/: __opengl_drawer.h  base_format.h  basic_colors.h  color.h  constants.h  debug_stream.h  frame_limiter.h  image.h  normal_colors.h  opengl_drawer.h  opengl_drawer_v2.h  qt_easiest_matrice_controler.h  qt_object_signal_locker.h  types.h
include/graphic_toolkit/classes/: non_copyable.hpp  non_copyable_movable.hpp
include/graphic_toolkit/opengl/: abstract_expander.h  abstract_expander.ipp  abstract_expander_property_support.h  abtract_expander_property.h  abtract_expander_property.ipp  attrib_pointer.h  attrib_pointer.ipp  attrib_pointer_by_offset.h  attrib_pointer_by_offset.ipp  composed_program.h  composed_program.ipp  core_context.h  index_buffer.h  index_buffer.ipp  index_expander.h  index_expander.ipp  normal_colors.h  primitive_type.h  primitives_heap.h  primitives_heap.ipp  quick_program.h  quick_program.ipp  quick_shader.h  quick_shader.ipp  quick_text.h  quick_text.ipp  quick_text_bff_wrapper.h  quick_text_expander.h  texture.h  uniform_container.h  uniform_container.ipp  uniform_lap.h  uniform_lap.ipp  uniform_set.h  uniform_set.ipp  vertex_buffer.h  vertex_buffer.ipp  vertex_expander.h  vertex_expander.ipp
include/gtk/: debug.hpp  enum_bits.hpp  equations.hpp  frame_limiter.hpp  image.hpp  math.hpp  math.ipp  matrices.hpp  random.hpp  time.hpp  types.hpp
include/gtk/classes/: non_copyable.hpp  non_copyable_movable.hpp
include/gtk/color/: hsl.hpp  hsl_plot.hpp  list.hpp  rgba.hpp
include/gtk/encoder/: ffmpeg_command_line.hpp  image.hpp
include/gtk/gui/: abstract.hpp  colors_palette.hpp  imgui.hpp  imgui.ipp
include/gtk/matrices/: abstract.hpp  base_camera.hpp  composed_matrices.hpp  model.hpp  projection.hpp  view_lookat.hpp  view_subjective.hpp
include/gtk/opengl/: composed_program.hpp  composed_program.ipp  core_context.hpp  primitives_heap.hpp  primitives_heap.ipp  quick_program.hpp  quick_program.ipp  quick_shader.hpp  quick_shader.ipp  quick_text.hpp  quick_text_bff_wrapper.hpp  quick_text_expander.hpp  sequence_divisor.hpp  shader_composer.hpp  texture.hpp
include/gtk/render/: abstract.hpp  data_matrix.hpp  data_obj.hpp  data_texture.hpp  painter_context.hpp  painter_context.ipp
include/gtk/resource_manager/: abstract.hpp  shader_lib.hpp
include/gtk/window/: abstract.hpp  abstract.ipp  abstract_controller.hpp  abstract_receiver.hpp  glfw.hpp  glfw.ipp  glfw_controller.hpp  glfw_controller.ipp
include/gtools/: base_format.hpp  basic_colors.hpp  constants.hpp  debug.hpp  enum_bits.hpp  frame_limiter.hpp  image.hpp  math.hpp  matrices.hpp  random.hpp  time.hpp  types.hpp
include/gtools/classes/: non_copyable.hpp
include/gtools/color/: hsl.hpp  hsl_plot.hpp  list.hpp  rgba.hpp
include/gtools/gui/: abstract.hpp  colors_palette.hpp  glfw_imgui.hpp  imgui.hpp  (+2 more)
links/: for using Array in shader -  glDrawArraysInstancedBaseInstance - OpenGL 4 Reference Pages.url  glMultiDrawElementsIndirect - OpenGL 4 Reference Pages.url
opengl/: quick_text.cpp  quick_text_bbf_wrapper.cpp  quick_text_expander.cpp
opengl/quick_text/: 512x512-Times_New_Roman.bff  512x512-Times_New_Roman.tga  CalibriLight-32x32-512-rgb.bff  text_triangles.frag  text_triangles.vert
resources/opengl/: opengl.erc
src/: image.cpp  random.cpp
src/decoder/: image.cpp  object.cpp
src/encoder/: image.cpp  object.cpp
src/gui/: colors_palette.cpp
src/opengl/: quick_text.cpp  quick_text_bbf_wrapper.cpp  quick_text_bff_wrapper.cpp  quick_text_expander.cpp
tools/: Codehead’s Bitmap Font Generator.url
(+168 files in other folders)
